--- a/Miharu Scan Helper/FrontEnd/PreferencesDialog.xaml
+++ b/Miharu Scan Helper/FrontEnd/PreferencesDialog.xaml
@@ -1,114 +1,129 @@
-﻿<Controls:MetroWindow
-	x:Name="PreferencesWindow"
-	xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls" x:Class="Miharu.FrontEnd.PreferencesDialog"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="clr-namespace:Miharu.FrontEnd"
-    mc:Ignorable="d"
-    Title="Miharu - Preferences" 
-	Icon="/Miharu Scan Helper;component/Resources/Icons/ScanHelperIcon.ico"
-	ResizeMode="CanResize" Width="550" Height="700" MinWidth="550" MinHeight="500">
-	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="1*" />
-			<RowDefinition Height="Auto" />
-		</Grid.RowDefinitions>
-		<Border BorderThickness="1" BorderBrush="Gray" Grid.Row="0" >
-			<ScrollViewer VerticalScrollBarVisibility="Visible" >
-				<StackPanel >
-					<Grid Margin="10">
-						<Grid.ColumnDefinitions>
-							<ColumnDefinition Width="1*" />
-							<ColumnDefinition Width="Auto" />
-						</Grid.ColumnDefinitions>
-						<Grid.RowDefinitions>
-							<RowDefinition Height="Auto" />
-							<RowDefinition Height="Auto" />
-						</Grid.RowDefinitions>
-						<Label Content="Tesseract Path" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="20" />
-						<TextBox x:Name="TesseractPathTextBox" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Margin="10,0" FontSize="16" TextChanged="TesseractPathTextBox_TextChanged" AcceptsReturn="False"/>
-						<Button x:Name="TesseractPathButton" Content="..." Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="10,0" Width="35" FontSize="16" ToolTip="Browse..." Click="TesseractPathButton_Click" Height="{Binding ActualHeight, ElementName=TesseractPathTextBox, Mode=OneWay}"/>
-					</Grid>
-					<Separator Margin="10"/>
-					<Grid Margin="10">
-						<Grid.RowDefinitions>
-							<RowDefinition Height="Auto" />
-							<RowDefinition Height="Auto" />
-						</Grid.RowDefinitions>
-						<Label Content="Theme" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="20" />
-						<UniformGrid Grid.Row="1" Columns="2" Margin="50,0,0,0">
-							<Grid Grid.Column="0" >
-								<Grid.ColumnDefinitions>
-									<ColumnDefinition Width="Auto" />
-									<ColumnDefinition Width="2*" />
-								</Grid.ColumnDefinitions>
-								<Label Content="Base Color" FontSize="12" HorizontalAlignment="Right" Margin="0,0,10,0"/>
-								<Controls:SplitButton x:Name="ThemeBaseColorListBox" Grid.Column="1" SelectionChanged="ThemeSelectionChanged" />
-							</Grid>
-							<Grid Grid.Column="1" Margin="30,0,0,0">
-								<Grid.ColumnDefinitions>
-									<ColumnDefinition Width="Auto" />
-									<ColumnDefinition Width="2*" />
-								</Grid.ColumnDefinitions>
-								<Label Content="Accent Color" FontSize="12" HorizontalAlignment="Right" Margin="0,0,10,0"/>
-								<Controls:SplitButton x:Name="ThemeAccentColorListBox" Grid.Column="1" SelectionChanged="ThemeSelectionChanged" />
-							</Grid>
-						</UniformGrid>
-					</Grid>
-					<Separator Margin="10"/>
-					<Grid Margin="10">
-						<Grid.ColumnDefinitions>
-							<ColumnDefinition Width="Auto" />
-							<ColumnDefinition Width="1*" />
-						</Grid.ColumnDefinitions>
-						<Label Content="Use screen DPI" Grid.Column="0" Grid.Row="0" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0"/>
-						<Controls:ToggleSwitch x:Name="UseScreenDPIToggleSwitch" Grid.Column="1" Grid.Row="0"
+﻿<Controls:MetroWindow x:Name="PreferencesWindow"
+                      x:Class="Miharu.FrontEnd.PreferencesDialog"
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      mc:Ignorable="d"
+                      Title="Miharu - Preferences" 
+	                  Icon="/Miharu Scan Helper;component/Resources/Icons/ScanHelperIcon.ico"
+	                  ResizeMode="CanResize" Width="550" Height="720" MinWidth="550" MinHeight="500">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Border BorderThickness="1" BorderBrush="Gray" Grid.Row="0" >
+            <ScrollViewer VerticalScrollBarVisibility="Visible" >
+                <StackPanel >
+                    <Grid Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Label Content="Tesseract Path" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="20" />
+                        <TextBox x:Name="TesseractPathTextBox" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Margin="10,0" FontSize="16" TextChanged="TesseractPathTextBox_TextChanged" AcceptsReturn="False"/>
+                        <Button x:Name="TesseractPathButton" Content="..." Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="10,0" Width="35" FontSize="16" ToolTip="Browse..." Click="TesseractPathButton_Click" Height="{Binding ActualHeight, ElementName=TesseractPathTextBox, Mode=OneWay}"/>
+                    </Grid>
+                    <Separator Margin="10"/>
+                    <Grid Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+
+                        <Label Content="Tesseract Source Language" Grid.Row="0" Grid.Column="0" FontSize="20"/>
+                        <Controls:SplitButton x:Name="TesseractSourceLanguageListBox" Grid.Row="1" Grid.Column="0" Width="120"/>
+                        <Label Content="Translation Target Language" Grid.Row="0" Grid.Column="1" FontSize="20"/>
+                        <Controls:SplitButton x:Name="TranslationTargetLanguageListBox" Grid.Row="1" Grid.Column="1" Width="120"/>
+                    </Grid>
+                    <Separator Margin="10"/>
+                    <Grid Margin="10">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Label Content="Theme" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="20" />
+                        <UniformGrid Grid.Row="1" Columns="2" Margin="50,0,0,0">
+                            <Grid Grid.Column="0" >
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="2*" />
+                                </Grid.ColumnDefinitions>
+                                <Label Content="Base Color" FontSize="12" HorizontalAlignment="Right" Margin="0,0,10,0"/>
+                                <Controls:SplitButton x:Name="ThemeBaseColorListBox" Grid.Column="1" SelectionChanged="ThemeSelectionChanged" />
+                            </Grid>
+                            <Grid Grid.Column="1" Margin="30,0,0,0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="2*" />
+                                </Grid.ColumnDefinitions>
+                                <Label Content="Accent Color" FontSize="12" HorizontalAlignment="Right" Margin="0,0,10,0"/>
+                                <Controls:SplitButton x:Name="ThemeAccentColorListBox" Grid.Column="1" SelectionChanged="ThemeSelectionChanged" />
+                            </Grid>
+                        </UniformGrid>
+                    </Grid>
+                    <Separator Margin="10"/>
+                    <Grid Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="1*" />
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Use screen DPI" Grid.Column="0" Grid.Row="0" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0"/>
+                        <Controls:ToggleSwitch x:Name="UseScreenDPIToggleSwitch" Grid.Column="1" Grid.Row="0"
 							OnContent="Enabled" OffContent="Disabled"
 							VerticalAlignment="Center" HorizontalAlignment="Left"  
 							IsOn="False" HorizontalContentAlignment="Right" FlowDirection="RightToLeft" Toggled="CheckChanged"/>
-					</Grid>
-					<Separator Margin="10"/>
-					<Grid Margin="10">
-						<Grid.ColumnDefinitions>
-							<ColumnDefinition Width="Auto" />
-							<ColumnDefinition Width="1*" />
-						</Grid.ColumnDefinitions>
-						<Label Content="Warn on text entry deletion" Grid.Column="0" Grid.Row="0" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0"/>
-						<Controls:ToggleSwitch x:Name="WarnTextDeletionToggleSwitch" Grid.Column="1" Grid.Row="0"
+                    </Grid>
+                    <Separator Margin="10"/>
+                    <Grid Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="1*" />
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Warn on text entry deletion" Grid.Column="0" Grid.Row="0" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0"/>
+                        <Controls:ToggleSwitch x:Name="WarnTextDeletionToggleSwitch" Grid.Column="1" Grid.Row="0"
 							OnContent="Enabled" OffContent="Disabled"
 							VerticalAlignment="Center" HorizontalAlignment="Left"  
 							IsOn="True" HorizontalContentAlignment="Right" FlowDirection="RightToLeft" Toggled="CheckChanged"/>
-					</Grid>
-					<Separator Margin="10"/>
-					<Grid Margin="10">
-						<Grid.ColumnDefinitions>
-							<ColumnDefinition Width="Auto" />
-							<ColumnDefinition Width="1*" />
-						</Grid.ColumnDefinitions>
-						<Grid.RowDefinitions>
-							<RowDefinition Height="Auto" />
-							<RowDefinition Height="1*" />
-						</Grid.RowDefinitions>
-						<Label Content="Auto Translate New Text Entries" Grid.Column="0" Grid.Row="0" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0"/>
-						<Controls:ToggleSwitch x:Name="AutoTranslateToggleSwitch" Grid.Column="1" Grid.Row="0"
+                    </Grid>
+                    <Separator Margin="10"/>
+                    <Grid Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="1*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="1*" />
+                        </Grid.RowDefinitions>
+                        <Label Content="Auto Translate New Text Entries" Grid.Column="0" Grid.Row="0" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0"/>
+                        <Controls:ToggleSwitch x:Name="AutoTranslateToggleSwitch" Grid.Column="1" Grid.Row="0"
 							OnContent="Enabled" OffContent="Disabled"
 							VerticalAlignment="Center" HorizontalAlignment="Left"  
 							IsOn="True" HorizontalContentAlignment="Right" FlowDirection="RightToLeft" Toggled="CheckChanged"/>
-						<StackPanel x:Name="TranslationSourcesStackPanel" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" >
+                        <StackPanel x:Name="TranslationSourcesStackPanel" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" >
 
-						</StackPanel>
-					</Grid>
-				</StackPanel>
-			</ScrollViewer>
-		</Border>
-		
-		<UniformGrid Grid.Row="1" HorizontalAlignment="Right" Rows="1" Columns="3" VerticalAlignment="Bottom">
-			
-			<Button x:Name="OkButton" Grid.Column="0" Content="Ok" Margin="5,30,5,10" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Click="OkButton_Click" FontSize="18" Width="auto"/>
-			<Button x:Name="CancelButton" Grid.Column="1" Content="Cancel" Margin="5,30,5,10" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Click="CancelButton_Click" FontSize="18"/>
-			<Button x:Name="ApplyButton" Grid.Column="2" Content="Apply" Margin="5,30,5,10" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Click="ApplyButton_Click" FontSize="18" Width="Auto" IsEnabled="False"/>
-		</UniformGrid>
-	</Grid>
+                        </StackPanel>
+                    </Grid>
+                </StackPanel>
+            </ScrollViewer>
+        </Border>
+
+        <UniformGrid Grid.Row="1" HorizontalAlignment="Right" Rows="1" Columns="3" VerticalAlignment="Bottom">
+
+            <Button x:Name="OkButton" Grid.Column="0" Content="Ok" Margin="5,30,5,10" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Click="OkButton_Click" FontSize="18" Width="auto"/>
+            <Button x:Name="CancelButton" Grid.Column="1" Content="Cancel" Margin="5,30,5,10" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Click="CancelButton_Click" FontSize="18"/>
+            <Button x:Name="ApplyButton" Grid.Column="2" Content="Apply" Margin="5,30,5,10" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Click="ApplyButton_Click" FontSize="18" Width="Auto" IsEnabled="False"/>
+        </UniformGrid>
+    </Grid>
 </Controls:MetroWindow>
