--- a/Miharu Scan Helper/FrontEnd/Preferences/PreferencesDialog.xaml
+++ b/Miharu Scan Helper/FrontEnd/Preferences/PreferencesDialog.xaml
@@ -1,5 +1,5 @@
 ﻿<Controls:MetroWindow x:Name="PreferencesWindow"
-                      x:Class="Miharu.FrontEnd.PreferencesDialog"
+                      x:Class="Miharu.FrontEnd.Preferences.PreferencesDialog"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
